# Epydios-MCP-Policy-Gateway

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  TRADEMARK.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: prototype.local.yaml  proxy.yaml
demo/: demo_driver.py  downstream_echo_server.py  proxy_demo_driver.py
scripts/: run_approver_stub.sh  run_cli.sh  run_docker_sandbox.sh  run_gateway.sh  run_proxy_gateway.sh
src/aimxs_approver_stub/: stub.py
src/aimxs_cli/: cli.py
src/aimxs_gateway/: config.py  main.py  schemas.py
src/aimxs_gateway/admin/: api.py
src/aimxs_gateway/approval/: store.py
src/aimxs_gateway/evidence/: sink_jsonl.py
src/aimxs_gateway/executor/: sandbox.py
src/aimxs_gateway/mcp/: stdio_server.py
src/aimxs_gateway/policy/: base.py  reference.py  rules.py
src/aimxs_gateway/proxy/: downstream.py  router.py
tests/: test_config_and_policy_smoke.py  test_sandbox_executor_smoke.py
